# Measuring-patterns-from-a-surface-

./: CMakeLists.txt  README.md
csv files/: distances.csv
headers/: visualisation.hpp
pcd data/: Brassica_pollen_grain.pcd  Dimple_1.pcd  dimple1.pcd  dimple2.pcd  fullSphere_4.56.pcd  fullSphere_5.63.pcd  half_sphere_20.pcd  half_sphere_50.pcd  half_sphere_80.pcd  half_sphere_with_plane_res(20).pcd  half_sphere_with_plane_res(50).pcd  half_sphere_with_plane_res(80).pcd
py scripts/: main.py  pcd.py  plot.py
source/: main.cpp  visualisation.cpp
